chore: initial set of language finalized

--- a/shared/heart_language/lib/l10n/intl_ru_RU.arb
+++ b/shared/heart_language/lib/l10n/intl_ru_RU.arb
@@ -80,7 +80,7 @@
   "@logInTitle": {
     "description": "Login page copy"
   },
-  "logInBody": "Вы уже начали что-то важное.\nДавайте продолжим!",
+  "logInBody": "Вы уже начали что-то важное.\r\nДавайте продолжим!",
   "@logInBody": {
     "description": "Login page copy"
   },
@@ -88,7 +88,7 @@
   "@signUpTitle": {
     "description": "Sign up page copy"
   },
-  "signUpBody": "Каждое путешествие начинается с одного решения.\nЭто — ваше.",
+  "signUpBody": "Каждое путешествие начинается с одного решения.\r\nЭто — ваше.",
   "@signUpBody": {
     "description": "Sign up page copy"
   },
@@ -96,7 +96,7 @@
   "@recoverTitle": {
     "description": "Recover page copy"
   },
-  "recoverBody": "Ваш путь не потерян.\nПросто небольшая пауза — давайте начнем заново.",
+  "recoverBody": "Ваш путь не потерян.\r\nПросто небольшая пауза — давайте начнем заново.",
   "@recoverBody": {
     "description": "Recover page copy"
   },
@@ -196,11 +196,11 @@
   "@archiveConfirmTitle": {
     "description": "Dialog title, e.g., \"Archive Push ups?\""
   },
-  "archiveConfirmBody": "Это упражнение будет перемещено в Архивные упражнения (найти в Упражнения → Ещё → Показать архивные).\n Архивирование не повлияет на ваши прошлые тренировки — история останется без изменений.",
+  "archiveConfirmBody": "Это упражнение будет перемещено в Архивные упражнения (найти в Упражнения → Ещё → Показать архивные).\r\n Архивирование не повлияет на ваши прошлые тренировки — история останется без изменений.",
   "@archiveConfirmBody": {
     "description": "Dialog body"
   },
-  "exerciseArchived": "Это упражнение находится в архиве\nи больше не будет отображаться в основной библиотеке.",
+  "exerciseArchived": "Это упражнение находится в архиве\r\nи больше не будет отображаться в основной библиотеке.",
   "@exerciseArchived": {
     "description": "Tooltip over archived icon"
   },
@@ -660,7 +660,7 @@
   "@leaveFeedback": {
     "description": "Settings item"
   },
-  "leaveFeedbackBody": "Сделайте скриншот, нарисуйте свои впечатления и оставьте нам заметку. Вы можете продолжать пользоваться приложением.\n\nМы любим обратную связь. Каждый рисунок и комментарий помогает нам сделать приложение лучше — для вас и всех остальных. Так что спасибо. Серьезно. {emoji}",
+  "leaveFeedbackBody": "Сделайте скриншот, нарисуйте свои впечатления и оставьте нам заметку. Вы можете продолжать пользоваться приложением.\r\n\r\nМы любим обратную связь. Каждый рисунок и комментарий помогает нам сделать приложение лучше — для вас и всех остальных. Так что спасибо. Серьезно. {emoji}",
   "@leaveFeedbackBody": {
     "description": "Settings item"
   },
@@ -712,7 +712,7 @@
   "@accountDeleted": {
     "description": "Delete account page"
   },
-  "accountDeletedBody": "Ваш аккаунт запланирован на удаление {date}.\n\nЕсли вы передумаете, вы можете восстановить свой аккаунт в любое время до этой даты.\n\nПросто нажмите кнопку ниже, чтобы отменить удаление и сохранить ваш аккаунт.",
+  "accountDeletedBody": "Ваш аккаунт запланирован на удаление {date}.\r\n\r\nЕсли вы передумаете, вы можете восстановить свой аккаунт в любое время до этой даты.\r\n\r\nПросто нажмите кнопку ниже, чтобы отменить удаление и сохранить ваш аккаунт.",
   "@accountDeletedBody": {
     "description": "Delete account page"
   },
@@ -779,5 +779,9 @@
   "removeCurrentPhoto": "Удалить текущее фото",
   "@removeCurrentPhoto": {
     "description": "Image picker menu"
+  },
+  "newStringRes": "Удалить текущее фото",
+  "@newStringRes": {
+    "description": "New desc"
   }
 }
