chore: migrating to flutter gen-l10n

--- a/shared/heart_language/lib/l10n/intl_en.arb
+++ b/shared/heart_language/lib/l10n/intl_en.arb
@@ -570,7 +570,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "customThemeColorSetting": "Custom theme colour",
+  "customThemeColorSetting": "Custom theme color",
   "@customThemeColorSetting": {
     "description": "Setting item name",
     "type": "text",
