feat: move script runs `gen-l10n` and `dart format` on import

--- a/shared/heart_language/lib/l10n/intl_ru_RU.arb
+++ b/shared/heart_language/lib/l10n/intl_ru_RU.arb
@@ -1200,5 +1200,11 @@
     "description": "Possessive pronoun, as in \"My exercises\"",
     "type": "text",
     "placeholders": {}
+  },
+  "newStr": "Выбрать из галереи",
+  "@newStr": {
+    "description": "New desc",
+    "type": "text",
+    "placeholders": {}
   }
 }
