--- a/shared/heart_language/lib/l10n/intl_en.arb
+++ b/shared/heart_language/lib/l10n/intl_en.arb
@@ -1200,5 +1200,11 @@
     "description": "Possessive pronoun, as in \"My exercises\"",
     "type": "text",
     "placeholders": {}
+  },
+  "newStr": "new string",
+  "@newStr": {
+    "description": "New desc",
+    "type": "text",
+    "placeholders": {}
   }
 }
