feat: OK button added to rest timer picker

--- a/shared/heart_language/lib/l10n/intl_en.arb
+++ b/shared/heart_language/lib/l10n/intl_en.arb
@@ -1203,7 +1203,13 @@
   },
   "goToWorkout": "Go to Workout",
   "@goToWorkout": {
-    "description": "Label for button that pulls up active workout UI.",
+    "description": "Label for button that pulls up active workout UI",
+    "type": "text",
+    "placeholders": {}
+  },
+  "setTimer": "Set timer",
+  "@setTimer": {
+    "description": "Label for button that adds a rest timer to an exercise",
     "type": "text",
     "placeholders": {}
   }
