--- a/shared/heart_language/lib/l10n/intl_en.arb
+++ b/shared/heart_language/lib/l10n/intl_en.arb
@@ -1235,5 +1235,17 @@
         "example": "App Store"
       }
     }
+  },
+  "addPhoto": "Add photo",
+  "@addPhoto": {
+    "description": "menu item that allows to add photo to a workout",
+    "type": "text",
+    "placeholders": {}
+  },
+  "editWorkoutName": "Edit workout name",
+  "@editWorkoutName": {
+    "description": "menu item that allows to edit workout name",
+    "type": "text",
+    "placeholders": {}
   }
 }
