--- a/shared/heart_language/lib/l10n/intl_ru.arb
+++ b/shared/heart_language/lib/l10n/intl_ru.arb
@@ -1247,5 +1247,11 @@
     "description": "menu item that allows to edit workout name",
     "type": "text",
     "placeholders": {}
+  },
+  "cropImage": "Обрезать изображение",
+  "@cropImage": {
+    "description": "Label in the image cropper",
+    "type": "text",
+    "placeholders": {}
   }
 }
