--- a/shared/heart_language/lib/l10n/intl_en.arb
+++ b/shared/heart_language/lib/l10n/intl_en.arb
@@ -1265,5 +1265,17 @@
     "description": "Menu item that opens exercise details",
     "type": "text",
     "placeholders": {}
+  },
+  "myDashboard": "My Dashboard",
+  "@myDashboard": {
+    "description": "Title of the dashboard screen with performance charts",
+    "type": "text",
+    "placeholders": {}
+  },
+  "newChart": "New chart",
+  "@newChart": {
+    "description": "Button that allows to create a new chart",
+    "type": "text",
+    "placeholders": {}
   }
 }
