--- a/shared/heart_language/lib/l10n/intl_en_CA.arb
+++ b/shared/heart_language/lib/l10n/intl_en_CA.arb
@@ -1355,5 +1355,49 @@
     "description": "For duration-based exercises, total accumulated time across all sets in a session or time window. Used to chart consistency and gradual increases for holds or mobility work.",
     "type": "text",
     "placeholders": {}
+  },
+  "passwordPolicyTitle": "Let's make a password that lifts:",
+  "@passwordPolicyTitle": {
+    "description": "Title for password requirements section shown during sign-up. Sets a friendly, motivational tone for the password creation rules that follow.",
+    "type": "text",
+    "placeholders": {}
+  },
+  "passwordPolicyMinLength": "at least {minLength} characters",
+  "@passwordPolicyMinLength": {
+    "description": "Password requirement: minimum character count. Displayed as a bullet point in the password policy list to inform users of the minimum length constraint.",
+    "type": "text",
+    "placeholders": {
+      "minLength": {
+        "type": "int"
+      }
+    }
+  },
+  "passwordPolicyMaxLength": "no more than {maxLength} (we believe in limits)",
+  "@passwordPolicyMaxLength": {
+    "description": "Password requirement: maximum character count. Displayed as a bullet point in the password policy list with a playful note about reasonable boundaries.",
+    "type": "text",
+    "placeholders": {
+      "maxLength": {
+        "type": "int"
+      }
+    }
+  },
+  "passwordPolicyUpperCase": "one uppercase letter",
+  "@passwordPolicyUpperCase": {
+    "description": "Password requirement: must contain at least one uppercase letter (A-Z). Shown as a validation rule in the password policy checklist.",
+    "type": "text",
+    "placeholders": {}
+  },
+  "passwordPolicyLowerCase": "one lowercase letter",
+  "@passwordPolicyLowerCase": {
+    "description": "Password requirement: must contain at least one lowercase letter (a-z). Shown as a validation rule in the password policy checklist.",
+    "type": "text",
+    "placeholders": {}
+  },
+  "passwordPolicyDigit": "one number somewhere in there",
+  "@passwordPolicyDigit": {
+    "description": "Password requirement: must contain at least one numeric digit (0-9). Displayed as a validation rule in the password policy checklist with casual phrasing.",
+    "type": "text",
+    "placeholders": {}
   }
 }
